aws/database-tools/blazer.tf
data "github_repository_file" "manifests_env" {
  repository = "notification-manifests"
  branch     = "main"
  file       = "helmfile/overrides/${local.manifest_env}.env"
}

locals {
  manifest_env        = var.env == "sandbox" ? "staging" : var.env
  image_tag           = yamldecode(data.github_repository_file.manifests_env.content)["BLAZER_DOCKER_TAG"]
  ecr_repository_name = aws_ecr_repository.blazer.name
}

data "aws_ecr_image" "blazer" {
  repository_name = local.ecr_repository_name
  image_tag       = local.image_tag
}

resource "aws_ecs_cluster" "blazer" {
  name = "blazer"

  setting {
    name  = "containerInsights"
    value = "enabled"
  }
}

resource "aws_ecs_service" "blazer" {
  name                   = "blazer"
  cluster                = aws_ecs_cluster.blazer.id
  task_definition        = aws_ecs_task_definition.blazer.arn
  desired_count          = 1
  launch_type            = "FARGATE"
  enable_execute_command = true

  network_configuration {
    security_groups = [var.database-tools-securitygroup]
    subnets         = var.vpc_private_subnets
  }
}

resource "aws_ecs_task_definition" "blazer" {
  family                   = "blazer"
  network_mode             = "awsvpc"
  requires_compatibilities = ["FARGATE"]

  cpu    = 256
  memory = 512

  execution_role_arn = aws_iam_role.blazer_execution_role.arn
  task_role_arn      = aws_iam_role.blazer_ecs_task.arn

  container_definitions = jsonencode([
    {
      "name" : "blazer",
      "cpu" : 0,
      "essential" : true,
      "image" : data.aws_ecr_image.blazer.image_uri,
      "logConfiguration" : {
        "logDriver" : "awslogs",
        "options" : {
          "awslogs-group" : "${var.cloudwatch_enabled ? "blazer" : "none"}",
          "awslogs-region" : "${var.region}",
          "awslogs-stream-prefix" : "blazer"
        }
      },
      "portMappings" : [
        {
          "hostPort" : 8080,
          "ContainerPort" : 8080,
          "Protocol" : "tcp"
        }
      ],
      "environment" : [{
        "name" : "LOG_LEVEL",
        "value" : "info"
        }, {
        "name" : "NOTIFY_URL",
        "value" : "https://${var.base_domain}"
        }, {
        "name" : "AWS_REGION",
        "value" : "${var.region}"
        }, {
        "name" : "BLAZER_SLACK_SNS_TOPIC_ARN",
        "value" : "${var.sns_alert_general_arn}"
      }],
      "secrets" : [{
        "name" : "BLAZER_DATABASE_URL",
        "valueFrom" : "${aws_ssm_parameter.sqlalchemy_database_reader_uri.arn}"
        }, {
        "name" : "BLAZER_CHECKS_DATABASE_URL",
        "valueFrom" : "${aws_ssm_parameter.blazer_checks_database_url.arn}"
        }, {
        "name" : "DATABASE_URL",
        "valueFrom" : "${aws_ssm_parameter.db_tools_environment_variables.arn}"
        }, {
        "name" : "GOOGLE_OAUTH_CLIENT_ID",
        "valueFrom" : "${aws_ssm_parameter.notify_o11y_google_oauth_client_id.arn}"
        }, {
        "name" : "GOOGLE_OAUTH_CLIENT_SECRET",
        "valueFrom" : "${aws_ssm_parameter.notify_o11y_google_oauth_client_secret.arn}"
      }]
    }
  ])
}
